corrigindo names nas tags de todas as paginas

--- a/clientes.html
+++ b/clientes.html
@@ -51,28 +51,28 @@
                     <table align="center">
                         <tr>
                             <td>Código do Cliente*</td>
-                            <td><input type="number" name="codigofornecedor" min="0" max="99999" id="" required>
+                            <td><input type="number" name="codigocliente" min="0" max="99999" id="" required>
                                 <button class="btn">Consultar</button>
                         </tr>
                         <tr>
                             <td>Nome completo</td>
-                            <td><input type="text" name="nomefornecededor" size="30" maxlength="50" id=""></td>
+                            <td><input type="text" name="nomecliente" size="30" maxlength="50" id=""></td>
                         </tr>
                         <tr>
                             <td>CPF*</td>
-                            <td><input style="text-align: right;" type="number" name="celularfornecedor" min="0" max="99999999999" id="" required></td>
+                            <td><input style="text-align: right;" type="number" name="cpfcliente" min="0" max="99999999999" id="" required></td>
                         </tr>
                         <tr>
                             <td>Data de Nascimento*</td>
-                            <td><input style="text-align: right;" type="date" name="celularfornecedor" size="10" maxlength="10" id="" required></td>
+                            <td><input style="text-align: right;" type="date" name="datanascimentocliente" size="10" maxlength="10" id="" required></td>
                         </tr>
                         <tr>
                             <td>Endereço</td>
-                            <td><input type="text" name="nomefornecededor" size="30" maxlength="50" id=""></td>
+                            <td><input type="text" name="enderecocliente" size="30" maxlength="50" id=""></td>
                         </tr>
                         <tr>
                             <td>Nº do Endereço</td>
-                            <td><input type="text" name="nomefornecededor" size="3" maxlength="5" id=""></td>
+                            <td><input type="text" name="numeroenderecocliente" size="3" maxlength="5" id=""></td>
                         </tr>
                     </table>
                 </fieldset>
@@ -82,22 +82,22 @@
                     <table align="center">
                         <tr>
                             <td>Bairro*</td>
-                            <td><input type="text" name="telefonefornecedor1" size="30" maxlength="30" id="" required></td>
+                            <td><input type="text" name="bairrocliente" size="30" maxlength="30" id="" required></td>
 
                         </tr>
                         <tr>
                             <td style="text-align: right;">Cidade*</td>
-                            <td><input type="text" name="telefonefornecedor2" size="30" maxlength="30" id="" required></td>
+                            <td><input type="text" name="cidadecliente" size="30" maxlength="30" id="" required></td>
                         </tr>
                         <tr>
                             <td>CEP*</td>
-                            <td><input style="text-align: right;" type="text" name="celularfornecedor" size="30" maxlength="30" id="" required></td>
+                            <td><input style="text-align: right;" type="text" name="cepcliente" size="30" maxlength="30" id="" required></td>
                         </tr>
                         <tr>
                             <td>UF*</td>
                             <td>
-                                <input size="2" list="browsers" />
-                                <datalist id="browsers">
+                                <input size="2" list="ufs" />
+                                <datalist id="ufs">
                                     <option value="AC">
                                     <option value="AL">
                                     <option value="AM">
@@ -130,30 +130,30 @@
                     <table align="center">
                         <tr>
                             <td>Sexo*</td>
-                            <td><input type="radio" name="emailfornecedor" id="" required>Masculino
-                                <input type="radio" name="emailfornecedor" id="" required>Feminino
-                                <input type="radio" name="emailfornecedor" id="" required>Não declarado</td>
+                            <td><input type="radio" name="sexocliente" id="" required>Masculino
+                                <input type="radio" name="sexocliente" id="" required>Feminino
+                                <input type="radio" name="sexocliente" id="" required>Não declarado</td>
                         </tr>
                         <tr>
                             <td>Telefone Celular*</td>
-                            <td><input type="number" name="datacadastrofornecedor" min="0" max="99999999999999" maxlength="14" id="" required></td>
+                            <td><input type="number" name="celcliente" min="0" max="99999999999999" maxlength="14" id="" required></td>
                         </tr>
                         <tr>
                             <td>E-mail</td>
-                            <td><input type="email" size="30" maxlength="30" name="dataultcompfornecedor" id=""></td>
+                            <td><input type="email" size="30" maxlength="30" name="emailcliente" id=""></td>
                         </tr>
                         <tr>
 
                             <td>Salário Pretendido</td>
-                            <td><input style="text-align: right;" type="number" name="saldocompradofornecedor" min="0" max="99999" maxlength="5" id="">R$</td>
+                            <td><input style="text-align: right;" type="number" name="salariocliente" min="0" max="99999" maxlength="5" id="">R$</td>
                         </tr>
                         <tr>
                             <td>Cor</td>
-                            <td><input id="clrbrdr" type="color" name="statusfornecedor" id=""></td>
+                            <td><input id="clrbrdr" type="color" name="corcliente" id=""></td>
                         </tr>
                         <tr>
                             <td>Cursos que fez</td>
-                            <td><textarea name="cursosquefezr" rows="5" cols="30" maxlength="500" id=""></textarea></td>
+                            <td><textarea name="cursoscliente" rows="5" cols="30" maxlength="500" id=""></textarea></td>
                         </tr>
                     </table>
                 </fieldset>
