--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     <table align="center">
                         <tr>
                             <td>CNPJ*</td>
-                            <td><input type="number" name="codigo" size="30" maxlength="50" id="" required>
+                            <td><input type="number" name="cnpjfornecedor" size="30" maxlength="50" id="" required>
                                 <button id="btnconsultarcnpj" class="btn btn-primary">Consultar</button></td>
                             <tr>
                                 <td>Razão*</td>
-                                <td><input type="text" name="nomefornecededor" size="20" maxlength="50" id="" required></td>
+                                <td><input type="text" name="razaofornecedor" size="20" maxlength="50" id="" required></td>
                             </tr>
 
                         </tr>
@@ -67,11 +67,11 @@
                     <table align="center">
                         <tr>
                             <td>Telefone 1*</td>
-                            <td><input type="text" name="telefonefornecedor1" size=15 maxlength="15" id="" required></td>
+                            <td><input type="text" name="telefone1fornecedor" size=15 maxlength="15" id="" required></td>
                         </tr>
                         <tr>
                             <td>Telefone 2</td>
-                            <td><input type="text" name="telefonefornecedor2" size=15 maxlength="15" id=""></td>
+                            <td><input type="text" name="telefone2fornecedor" size=15 maxlength="15" id=""></td>
                         </tr>
                         <tr>
                             <td>Celular*</td>
