--- a/produtos.html
+++ b/produtos.html
@@ -52,12 +52,12 @@
                     <table align="center">
                         <tr>
                             <td>CNPJ*</td>
-                            <td><input type="number" name="codigo" size="30" maxlength="30" id="" required></td>
+                            <td><input type="number" name="cnpjproduto" size="30" maxlength="30" id="" required></td>
                             <td><button class="btn">Consultar</button></td>
                         </tr>
                         <tr>
                             <td>Razão*</td>
-                            <td><input type="text" name="nomefornecededor" size="20" maxlength="50" id="" required></td>
+                            <td><input type="text" name="razaoproduto" size="20" maxlength="50" id="" required></td>
                         </tr>
                     </table>
                 </fieldset>
@@ -67,15 +67,15 @@
                     <table align="center">
                         <tr>
                             <td>Unidade*</td>
-                            <td><input type="text" name="telefonefornecedor1" size="2" maxlength="3" id="" required></td>
+                            <td><input type="text" name="unidadeproduto" size="2" maxlength="3" id="" required></td>
                         </tr>
                         <tr>
                             <td>Peso*</td>
-                            <td><input type="number" name="telefonefornecedor2" size=5 maxlength="5" id="" required>(kg)</td>
+                            <td><input type="number" name="pesoproduto" size=5 maxlength="5" id="" required>(kg)</td>
                         </tr>
                         <tr>
                             <td>Custo*</td>
-                            <td><input style="text-align: right;" type="number" name="celularfornecedor" size="10" maxlength="10" id="" required>R$</td>
+                            <td><input style="text-align: right;" type="number" name="custoproduto" size="10" maxlength="10" id="" required>R$</td>
                         </tr>
                     </table>
                 </fieldset>
@@ -85,27 +85,27 @@
                     <table align="center">
                         <tr>
                             <td>Venda*</td>
-                            <td><input type="number" name="emailfornecedor" step="0.00" size="10" maxlength="10" id="" required>R$</td>
+                            <td><input type="number" name="vendaproduto" step="0.00" size="10" maxlength="10" id="" required>R$</td>
                         </tr>
                         <tr>
                             <td>Ultima Compra*</td>
-                            <td><input style="text-align: right;" type="date" name="datacadastrofornecedor" id="" required></td>
+                            <td><input style="text-align: right;" type="date" name="ultimacompraproduto" id="" required></td>
                         </tr>
                         <tr>
                             <td>Fornecedor</td>
-                            <td><input type="number" size="5" maxlength="5" name="dataultcompfornecedor" id=""></td>
+                            <td><input type="number" size="5" maxlength="5" name="fornecedorproduto" id=""></td>
                         </tr>
                         <tr>
                             <td>Quantidade*</td>
-                            <td><input type="number" name="saldocompradofornecedor" min="0" max="10000" maxlength="5" id="" required></td>
+                            <td><input type="number" name="quantidadeproduto" min="0" max="10000" maxlength="5" id="" required></td>
                         </tr>
                         <tr>
                             <td>Mínimo</td>
-                            <td><input type="number" name="statusfornecedor" size="5" maxlength="5" id=""></td>
+                            <td><input type="number" name="minimoproduto" size="5" maxlength="5" id=""></td>
                         </tr>
                         <tr>
                             <td>Imagem</td>
-                            <td><input id="inputimg" type="file" name="dataultcompfornecedor" id=""></td>
+                            <td><input id="inputimg" type="file" name="imgproduto" id=""></td>
                         </tr>
                     </table>
                 </fieldset>
