--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="//assets.locaweb.com.br/locastyle/2.0.6/stylesheets/locastyle.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -16,133 +16,79 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0C1446;">
             <div class="container-fluid">
-                <a class="navbar-brand disabled" href="#">Controle de Cadastros</a>
+                <img width="40px" src="./images/logo.png" alt="Imagem não encontrada...">
+                <a class="navbar-brand disabled" href="#">OutletNet</a>
                 <button class="navbar-toggler pages" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item" id="nav1">
-                            <a class="nav-link disabled text-white" aria-current="page" href="#">Cadastrar Fornecedor</a>
+                            <a class="nav-link disabled text-white" aria-current="page" href="#">Principal</a>
                         </li>
                         <li class="nav-item" id="nav2">
-                            <a class="nav-link text-light" href="./produtos.html">Cadastrar Produtos</a>
+                            <a class="nav-link text-white" href="./fornecedor.html">Fornecedor</a>
                         </li>
                         <li class="nav-item" id="nav3">
-                            <a class="nav-link  text-light" href="./clientes.html">Cadastrar Clientes</a>
+                            <a class="nav-link text-light" href="./produtos.html">Produtos</a>
+                        </li>
+                        <li class="nav-item" id="nav4">
+                            <a class="nav-link text-light" href="./clientes.html">Clientes</a>
+                        </li>
+                        <li class="nav-item dropdown" id="nav5">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Movimento
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="#">Entrada de Produtos</a></li>
+                              <li><a class="dropdown-item" href="#">Saída de Produtos</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="#">Baixa de Produtos</a></li>
+                              <li><a class="dropdown-item" href="#">Devolução de Produtos</a></li>
+                            </ul>
+                          </li>
+                        <li class="nav-item" id="nav6">
+                            <a class="nav-link disabled" aria-disabled="true" href="#">Relatórios</a>
                         </li>
                     </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Google" aria-label="Search">
+                        <button class="btn btn-outline-primary" type="submit">Pesquisar</button>
+                    </form>
                 </div>
             </div>
         </nav>
     </div>
-    <div align="center">
-        <fieldset align="center">
-            <h2>Cadastro de Fornecedores <i class="fa fa-truck"></i></h2>
-            <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
-        </fieldset>
-    </div>
-    <form action="" method="POST">
-        <div align="center">
-            <fieldset id="fs1">
-                <legend align="center"><strong>Dados do Fornecedor</strong></legend>
-                <fieldset class="fsborder">
-                    <legend align="center">Identificação</legend>
-                    <table align="center">
-                        <tr>
-                            <td>CNPJ*</td>
-                            <td><input type="number" name="cnpjfornecedor" size="30" maxlength="50" id="" required>
-                                <button id="btnconsultarcnpj" class="btn btn-primary">Consultar</button></td>
-                            <tr>
-                                <td>Razão*</td>
-                                <td><input type="text" name="razaofornecedor" size="20" maxlength="50" id="" required></td>
-                            </tr>
-
-                        </tr>
-                    </table>
-                </fieldset>
-                <br>
-                <fieldset class="fsborder">
-                    <legend align="center">Contato</legend>
-                    <table align="center">
-                        <tr>
-                            <td>Telefone 1*</td>
-                            <td><input type="text" name="telefone1fornecedor" size=15 maxlength="15" id="" required></td>
-                        </tr>
-                        <tr>
-                            <td>Telefone 2</td>
-                            <td><input type="text" name="telefone2fornecedor" size=15 maxlength="15" id=""></td>
-                        </tr>
-                        <tr>
-                            <td>Celular*</td>
-                            <td><input type="text" name="celularfornecedor" size=15 maxlength="15" id="" required></td>
-                        </tr>
-                        <tr>
-                            <td>Whatsapp</td>
-                            <td><input type="text" name="whatsappfornecedor" size=15 maxlength="15" id=""></td>
-                        </tr>
-                    </table>
-                </fieldset>
-                <br>
-                <fieldset class="fsborder">
-                    <legend align="center">Informações Adicionais</legend>
-                    <table align="center">
-                        <tr>
-                            <td>E-mail*</td>
-                            <td><input type="email" name="emailfornecedor" size="30" maxlength="50" id="" required></td>
-                        </tr>
-                        <tr>
-                            <td>Data de Cadastro*</td>
-                            <td><input style="text-align: right;" type="date" name="datacadastrofornecedor" id="" required></td>
-                        </tr>
-                        <tr>
-                            <td>Data da Última Compra</td>
-                            <td><input style="text-align: right;" type="date" name="dataultcompfornecedor" id=""></td>
-                        </tr>
-                        <tr>
-                            <td>Saldo de Compras*</td>
-                            <td><input style="text-align: right;" type="number" name="saldocompradofornecedor" min="0" max="100000" maxlength="12" id="" required>R$</td>
-                        </tr>
-                        <tr>
-                            <td>Status</td>
-                            <td><input type="radio" name="statusfornecedor" id="">Ativo</td>
-                            <tr>
-                                <td></td>
-                                <td><input type="radio" name="statusfornecedor" id="">Inativo</td>
-                            </tr>
-                        </tr>
-                        <tr>
-                            <td>Observação</td>
-                            <td><textarea rows="5" cols="30" maxlength="500" name="observacaofornecedor" id=""></textarea></td>
-                        </tr>
-                    </table>
-                </fieldset>
-                <br>
-                <fieldset class="fsborder">
-                    <legend align="center">Dados Bancários</legend>
-                    <table align="center">
-                        <tr>
-                            <td>Banco*</td>
-                            <td><input type="text" name="bancofornecedor" id="" size="3" maxlength="3" style="text-align: right;" required></td>
-                        </tr>
-                        <tr>
-                            <td>Agência*</td>
-                            <td><input type="text" name="agenciafornecedor" size="5" maxlength="5" id="" style="text-align: right;" required></td>
-                        </tr>
-                        <tr>
-                            <td>Conta*</td>
-                            <td><input type="text" name="contafornecedor" id="" size="10" maxlength="10" style="text-align: right;" required></td>
-                        </tr>
-                    </table>
-                </fieldset>
-                <br>
-                <fieldset align="center">
-                    <input id="btnsub" class="btn btn-primary" type="submit" value="Gravar">
-                    <button class="btn" id="btncancel">Cancelar</button>
-                </fieldset>
-            </fieldset>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-    </form>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(35).jpg" class="d-block w-100" alt="Imagem não encontrada">
+          </div>
+          <div class="carousel-item">
+            <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(130).jpg" class="d-block w-100" alt="Imagem não encontrada">
+          </div>
+          <div class="carousel-item">
+            <img src="https://wowslider.com/sliders/demo-93/data1/images/landscape.jpg" class="d-block w-100" alt="Imagem não encontrada">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="//code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script type="text/javascript" src="//assets.locaweb.com.br/locastyle/2.0.6/javascripts/locastyle.js"></script>
+    <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </body>
 
 </html>
