--- a/clientes.html
+++ b/clientes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="//assets.locaweb.com.br/locastyle/edge/stylesheets/locastyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/clientes.css">
@@ -16,22 +16,45 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0C1446;">
             <div class="container-fluid">
-                <a class="navbar-brand disabled" href="#">Controle de Cadastros</a>
+                <img width="40px" src="./images/logo.png" alt="Imagem não encontrada...">
+                <a class="navbar-brand disabled" href="#">OutletNet</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item" id="nav1">
-                            <a class="nav-link text-white" aria-current="page" href="./index.html">Cadastrar Fornecedor</a>
+                            <a class="nav-link text-white" href="./index.html">Principal</a>
                         </li>
                         <li class="nav-item" id="nav2">
-                            <a class="nav-link text-light" href="./produtos.html">Cadastrar Produtos</a>
+                            <a class="nav-link text-white" href="./fornecedor.html">Fornecedor</a>
                         </li>
                         <li class="nav-item" id="nav3">
-                            <a class="nav-link disabled text-light" href="#">Cadastrar Clientes</a>
+                            <a class="nav-link text-light" href="./produtos.html">Produtos</a>
+                        </li>
+                        <li class="nav-item" id="nav4">
+                            <a class="nav-link disabled text-light" aria-current="page" href="#">Clientes</a>
+                        </li>
+                        <li class="nav-item dropdown" id="nav5">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Movimento
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="#">Entrada de Produtos</a></li>
+                              <li><a class="dropdown-item" href="#">Saída de Produtos</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="#">Baixa de Produtos</a></li>
+                              <li><a class="dropdown-item" href="#">Devolução de Produtos</a></li>
+                            </ul>
+                          </li>
+                        <li class="nav-item" id="nav6">
+                            <a class="nav-link disabled" aria-disabled="true" href="#">Relatórios</a>
                         </li>
                     </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Google" aria-label="Search">
+                        <button class="btn btn-outline-primary" type="submit">Pesquisar</button>
+                    </form>
                 </div>
             </div>
         </nav>
@@ -42,7 +65,7 @@
             <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
         </fieldset>
     </div>
-    <form action="">
+    <form role="form">
         <div align="center">
             <fieldset id="fs1">
                 <legend align="center"><strong>Dados do Cliente</strong></legend>
@@ -60,7 +83,7 @@
                         </tr>
                         <tr>
                             <td>CPF*</td>
-                            <td><input style="text-align: right;" type="number" name="cpfcliente" min="0" max="99999999999" id="" required></td>
+                            <td><input data-mask="000.000.000-00" placeholder="Ex. 000.000.000-00" style="text-align: right;" type="text" name="cpfcliente" min="0" max="99999999999" id="" required></td>
                         </tr>
                         <tr>
                             <td>Data de Nascimento*</td>
@@ -91,7 +114,7 @@
                         </tr>
                         <tr>
                             <td>CEP*</td>
-                            <td><input style="text-align: right;" type="text" name="cepcliente" size="30" maxlength="30" id="" required></td>
+                            <td><input data-mask="00.000-000" placeholder="Ex. 00.000-000" class="input-form" style="text-align: right;" type="text" name="cepcliente" size="30" maxlength="30" id="" required></td>
                         </tr>
                         <tr>
                             <td>UF*</td>
@@ -165,6 +188,10 @@
             </fieldset>
         </div>
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="//code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script type="text/javascript" src="//assets.locaweb.com.br/locastyle/2.0.6/javascripts/locastyle.js"></script>
+    <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </body>
 
 </html>
